--- a/VRChat/25/1384125.html
+++ b/VRChat/25/1384125.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YPkoTGeQHhLBf5Cz6GB/bwKk47cakIn4sg3uF9ceXQs="></script>
+    "/01XCHOb4C08Yl2y8LBapZ/sHZJ04wXc4wrJ+dvcBOI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"魔法少女のつえ","description":"魔法少女が使っていそうな魔法の杖です。\nEmissionの値をいじれば中心の水晶部分を光らせることも可能です。\n残念ながら魔法は出ませんので物理で押し通してください。\n\n2020/10/23 追記\nエミッターを付けました。キラキラした星が出ます。ちょっと魔法っぽい。\n\n\nまた、本製品はユニティちゃんトゥーンシェーダー2(UTS2_v2.0.7)を使用しています。\n同梱しておりますUTS2_ShaderOnly_v2.0.7_Release.unitypackageを事前にインポートしてください。","url":"https://booth.pm/ja/items/1384125","offers":{"priceCurrency":"JPY","@type":"Offer","price":"330"},"image":"https://booth.pximg.net/c/620x620/5e3688dc-a990-4181-9d0b-7698aa7c892e/i/1384125/5eebd5fc-2f70-43bc-a62e-cb213e2275d3_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YPkoTGeQHhLBf5Cz6GB/bwKk47cakIn4sg3uF9ceXQs="></script>
+    nonce="/01XCHOb4C08Yl2y8LBapZ/sHZJ04wXc4wrJ+dvcBOI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1384125/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               143
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1384125/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               143
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
