--- a/VRChat/90/1384890.html
+++ b/VRChat/90/1384890.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hq87kWHOcJWHdJvMrIXLwqW+YhN8e9Z6fC5khthUpOY="></script>
+    "XbvyXh82xsH0HHlISGNKThK8oPr+x8ownXPcCqZMqJw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"集会向け多目的広場\"Stage Hall\"","description":"VRChatでの集会、展示場作成などに適した、ミュージアム、イベントホールをイメージしたワールドアセットです。\n\nポリゴン数：△4068\n\nLighting設定、Collider、Scene Descriptorを設定しているので、Sceneを配置するだけでworldのアップロード準備が整います。\n追記：scene内にあるdescriptorはSDK2のものなのでSDK3/udonを使う場合は手動で配置してください。\n\n※Sceneをそのまま使用するとクレジットが配置されますが、削除して使用しても構いません\n\n※簡単な用語説明\n・Collider：当たり判定。床や壁などに使う。これがないとメッシュで床があっても突き抜けて下に落ちる。\n・Scene Descriptor:Avater Descriptorのワールド版。これを以てVRCはワールドと認識する他、ワールドの基本設定（出現/リスポーン位置など）が内包されている。\n当アセットではSpawn Pointがこれに該当。","url":"https://booth.pm/ja/items/1384890","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/1384890/6d303692-c055-4ef1-acdc-15341d179b75_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hq87kWHOcJWHdJvMrIXLwqW+YhN8e9Z6fC5khthUpOY="></script>
+    nonce="XbvyXh82xsH0HHlISGNKThK8oPr+x8ownXPcCqZMqJw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -120,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -164,7 +166,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1384890/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               479
@@ -179,14 +181,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1384890/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               479
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
