--- a/VRChat/56/1384756.html
+++ b/VRChat/56/1384756.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IaNbz+rwjoMBoORrisBK7I6l1vmEOrHB1/3xLZq0Thw="></script>
+    "VWGh68DqVH8098ht6yKSo30J9SZRm53oXpKyZNPcOew="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"でぃぐらてぃーむ式お茶碗/ご飯付きお茶碗","description":"でぃぐらてぃーむ式お茶碗/ご飯付きお茶碗 Readme\n━━━━━\n\n練習で作ったお茶碗のFBXです。おまけでご飯が盛られたデータも同梱しています。\nポリゴン数少なめに作ったので、Quest版VRCにも持ち込めるかも？\n\n【更新履歴】\n2020/03/23 V1.1\n底部のメッシュの法線を間違えていたのを修正\n\n2019/05/24 V1.0\n初版\n\n【規約】\n・改変→可（むしろ推奨）\n・再配布→不可（改変した場合でも不可）\n・VRC上でのワールドやアバターに組み込んでのPublic公開→可\n（ただし、当データが主となる形での公開は不可）\n・ゲームやアニメーションなど、個人での利用→可（収益化も可）\n\n手倉テイム個人、および運営関係者の名前、作品名、イベント名を含んだ、あるいは類似する商標を、書面による許可なく意図的に登録する行為を行うことを禁止します。\n（2022/05/17 暫定的追記。次回zip更新時にreadme.txtへ追加します）\n\nTwitter: @diglateam3\n個人サイト「DiglaWorks」: https://diglateam3.com/","url":"https://booth.pm/ja/items/1384756","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/d0f4a82c-f633-40af-bb66-a1f35f2956a9/i/1384756/5ccfe382-34b9-4af4-9886-c5822d84e769_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IaNbz+rwjoMBoORrisBK7I6l1vmEOrHB1/3xLZq0Thw="></script>
+    nonce="VWGh68DqVH8098ht6yKSo30J9SZRm53oXpKyZNPcOew="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1384756/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               2
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1384756/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               2
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
