--- a/VRChat/34/1384534.html
+++ b/VRChat/34/1384534.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xWSf1xpDxVZlVoJzFHKwX89hdv/Bw5ldlQnPRS0DyX4="></script>
+    "WVvYe7wlxZhEzZLOxTNAROkCTMVfvbPoLnh52GxzPOw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"よくある瓶（marucola_bottle）","description":"\n\nVRChat向け3Dモデル「よくある瓶（marucola_bottle）」\n\n制作者　マルコウ\n\n\n――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――\n\n・本モデルはVRChat向けに制作した3Dモデルです。\n\n\n・利用規約を記載しています。ご了承の上ご購入下さい。\n  ※DLの時点で規約に同意したものといたします。\n\n――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――\n\n【内容物】\n\nmarucola_bottle.unitypackage\n\nread me .txt\n\n\n\n\n【利用規約】\n\n・本モデルの著作権は、制作者　マルコウに帰属します。\n\n・改変後のデータの著作権も同様です。また、改変後のデータにも本規約は適用されます。\n\n・本規約は予告なく変更される場合があります。その際は最新のものが適用されます。\n\n・R-18、R-18Gの表現は可です。法律、及び各サービスの規約に従い、自己責任の下ご利用下さい。\n\n・動画や生放送、Vtuberとしてのキャラクターの利用、また、他者の配信、動画への映り込み・出演に関して、収益化の有無に関わらず全て許可致します。クレジット表記も不要です。\n\n・本モデルをご利用した事で発生した如何なるトラブル、損害等に関して、制作者マルコウは責任を負いません。\n\n・本データは予告なくアップデート、販売の停止をする場合があります\n\n【免責事項】\n\n・本モデルをご利用した事で発生した如何なるトラブル、損害等に関して、制作者マルコウは責任を負いません。\n\n【禁止事項】\n\n・再配布（VRChatのワールドに組み込む・VRCのペデスタル等は許可）\n\n・製作者以外の再販売\n\n・政治的、差別的な用途への利用。\n\n\n\n規約制定日 2019/05/24\n\n\n質問等がございましたら下記の連絡先にご連絡ください。\n\n\n連絡先\nTwitter：marukou1104","url":"https://booth.pm/ja/items/1384534","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b997a55a-4689-4635-9a6a-044249ad8a76/i/1384534/5f25b7e2-88ed-409a-a3b9-5bbcc62ecd7c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xWSf1xpDxVZlVoJzFHKwX89hdv/Bw5ldlQnPRS0DyX4="></script>
+    nonce="WVvYe7wlxZhEzZLOxTNAROkCTMVfvbPoLnh52GxzPOw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1384534/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1384534/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
