--- a/VRChat/39/1381939.html
+++ b/VRChat/39/1381939.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "za5cJvBOGKT5m1uGmUoRsNu1cEJedpm8cjmaRSPnqrY="></script>
+    "7TOTOYbE6lT+rORndm2KC/+XqjHeIpRKWFC9/b2IkRM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"邪教徒の眼球（VRChat用モデル）","description":"jakyoutoがVRChatで使用する自作単眼アバターの眼球と同じ手法で作った眼球だけのモデルです。シェイプキーは設定してません。unlitシェーダーのマテリアルを適応したprefabを含むunitypackageが入っています。説明画像にあるようにもともと単眼アバターの見栄えをよくするために作ったものですが、単眼以外のアバターでも使える場合はあるかもしれません。","url":"https://booth.pm/ja/items/1381939","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f4df878d-e8af-43d9-ae25-01e58089f738/i/1381939/d399f801-40a3-4376-8604-ffb50489a24b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="za5cJvBOGKT5m1uGmUoRsNu1cEJedpm8cjmaRSPnqrY="></script>
+    nonce="7TOTOYbE6lT+rORndm2KC/+XqjHeIpRKWFC9/b2IkRM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1381939/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1381939/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
