--- a/VRChat/93/1052193.html
+++ b/VRChat/93/1052193.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Ohomfz/wZiQgUNhsqjaxP22Immgmbv5VzaqVDdFEBPo="></script>
+    "M4kHgT6dBejXZc5elFiDrtJgSzx2uFRNl3HXgzqcNBo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】「心音」46音オールインワンパック","description":"◆VRChatを主とした心音データ兼効果音集です\n全部で46音あります。\nこのパッケージに限り、営利問わず再配布も可能です。\n※詳しくは下の追加見出しテキストに書いております。\n\nサンプル動画は途切れているように聞こえますが、ループ前提ですので、ループさせればきちんとループ音になります。\n\n◇内容物\nwavフォーマット\n生データです。\n改変される場合はこちらを推奨します。\n\nmp3フォーマット\n192kbpsでエンコードしました。\n導入される場合はこちらを推奨します。","url":"https://booth.pm/ja/items/1052193","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ad46429b-130a-4fcb-b6cc-da3e57ffe306/i/1052193/7f2cf43c-2bd3-4211-b31b-2cc372f2ba2a_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Ohomfz/wZiQgUNhsqjaxP22Immgmbv5VzaqVDdFEBPo="></script>
+    nonce="M4kHgT6dBejXZc5elFiDrtJgSzx2uFRNl3HXgzqcNBo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1052193/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               349
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1052193/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               349
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
