--- a/VRChat/80/1051980.html
+++ b/VRChat/80/1051980.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RwpRTUCKCEBoDUJVuR48VR74nK2UuN6PJQ6UhwnO++w="></script>
+    "f6V8iwICmhFrt0FakzzXelLA9Ia18VOGb410/p8MuNY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】VR Tattoo 02 テクスチャ素材","description":"テクスチャ改変用の透過png画像素材です。","url":"https://booth.pm/ja/items/1051980","offers":{"priceCurrency":"JPY","@type":"Offer","price":"298"},"image":"https://booth.pximg.net/c/620x620/0b8c0ae5-9b47-4d8d-adcb-3d51a8fb4fb1/i/1051980/ae51eefb-2c96-4bf1-b408-f3301b1c6d83_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RwpRTUCKCEBoDUJVuR48VR74nK2UuN6PJQ6UhwnO++w="></script>
+    nonce="f6V8iwICmhFrt0FakzzXelLA9Ia18VOGb410/p8MuNY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1051980/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1051980/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
