--- a/VRChat/05/1050005.html
+++ b/VRChat/05/1050005.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BbKOhJTzaM6UMp52EqfTbNE0I3wgD3+YiEHc+trlL74="></script>
+    "4JHBd1g3TJ3hnNocbreMQVi41q/fXeX4we1ziE2TK6k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat想定】MCF M1100 Durandal Cusutom レバーアクションソウドオフ","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\nローポリレバーアクション･･･カービン？なのかな。わからん。\nボーン入りでレバーが可動！ほかにも色々動くよ！\nアバターにつける用にローポリモデルとホルスターも同梱。アバターにつける場合はホルスター側の銃をつけ、抜くときにAOで消してください。\n銃とホルスターの組み合わせはマテリアルの変更で対応。\n\n本体3色、ホルスター2色\nMCF BOリボルバー M1358とのセット販売もアリ\n\n\nSSは #MCF_VRC をつけてツイートしてくれると私が喜びます。\n\nMCF M1100 Durandal Cusutom:1100\n専用ホルスター＆ローポリ銃：677\n\nVer 2出ました\nMCF Durandal 2nd Lever Action Rifle\nhttps://miyakon.booth.pm/items/4498964\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/1050005","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1050005/349e9696-f9e0-41e3-abb4-40150fe8c084_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BbKOhJTzaM6UMp52EqfTbNE0I3wgD3+YiEHc+trlL74="></script>
+    nonce="4JHBd1g3TJ3hnNocbreMQVi41q/fXeX4we1ziE2TK6k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1050005/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               79
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1050005/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               79
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
